[package]
name = "supplychains"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>", "Maarten Wiedenhof <maartenwiedenhof@gmail.com"]
edition = "2018"

[dependencies]
amethyst = "0.10.0"
log = { version = "0.4.6", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
gfx = "0.17.1"
gfx_core = "0.8.3"
nalgebra="0.17.2"