[package]
name = "supplychains"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>", "Maarten Wiedenhof <maartenwiedenhof@gmail.com"]
edition = "2018"

[dependencies]
glium = "0.23.0"
nalgebra = "0.17.0"
failure = "0.1.5"
log = "0.4.6"
pretty_env_logger = "0.3.0"
specs = "0.14.3"
noise = "0.5.1"